# GC_color

./: CMakeLists.txt  untitled.ui
include/: color.h  color_opencv.h
src/: color.cpp  color_opencv.cpp  main.cpp  test.cpp  test.h
